--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "@typesafedev/prowling-cat-ts",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Animation of prowling cat",
   "main": "index.js",
   "bin": "bin/index.js",
+  "repository": "https://github.com/typesafedev/prowling-cat-ts",
   "scripts": {
     "start": "npm run build && npm run global",
     "build": "tsc -p .",
     "global": "npm i -g && prowling-cat-ts",
     "refresh": "npm install",
-    "tscov": "tscov --min-coverage 5",
-    "tscov:d": "tscov --details",
-    "prepublish": "npm run build && npm publish --access public",
-    "docs": "typedoc --out docs ./src",
+    "publish:prod": "npm run build && npm publish --access public",
     "init": "git init && tsc --init"
   },
   "keywords": [
@@ -21,26 +19,11 @@
   "author": "Andy Lam",
   "license": "MIT",
   "dependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "ascii-animation": "^1.0.4",
-    "figlet": "^1.5.2",
-    "fs-extra": "^10.0.0",
-    "inquirer": "^8.2.0",
-    "inversify": "^6.0.1",
-    "kleur": "^4.1.4",
-    "readline-sync": "^1.4.10",
-    "reflect-metadata": "^0.1.13",
-    "tslib": "^2.3.1"
+    "ascii-animation": "^1.0.4"
   },
   "devDependencies": {
-    "@liftr/tscov": "^2.0.0",
-    "@types/figlet": "^1.5.4",
-    "@types/inquirer": "^8.1.3",
-    "@types/inquirer-autocomplete-prompt": "^1.3.3",
     "@types/node": "^16.11.10",
-    "inquirer-autocomplete-prompt": "^1.4.0",
     "ts-node": "^10.4.0",
-    "typedoc": "^0.22.10",
     "typescript": "^4.5.2"
   }
 }
